--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -6,17 +6,27 @@
   --fill-1: white;
   --fill-2: var(--gray5);
   --outline: var(--text-color);
-  --text-color: rgb(44, 44, 46); // Gray5 dark.
+  --text-color: var(--gray5-dark);
 
-  // Apple HGI light mode colors.
+  // Apple HGI light and dark mode colors.
   --gray1: rgb(142, 142, 147);
+  --gray1-dark: rgb(142, 142, 147);
+
   --gray2: rgb(174, 174, 178);
+  --gray2-dark: rgb(99, 99, 102);
+
   --gray3: rgb(199, 199, 204);
+  --gray3-dark: rgb(72, 72, 74);
+
   --gray4: rgb(209, 209, 214);
+  --gray4-dark: rgb(58, 58, 60);
+
   --gray5: rgb(229, 229, 234);
+  --gray5-dark: rgb(44, 44, 46);
+
   --gray6: rgb(242, 242, 247);
-  
-  /* Colors. */
+  --gray6-dark: rgb(28, 28, 30);
+
   --red: rgb(255, 56, 60);
   --red-dark: rgb(255, 66, 69);
   --red-contrast: rgb(233, 21, 45);  
@@ -80,20 +90,13 @@
   // Global properties.
   --transition: .25s;
 
+  // Dark mode theming.
   @media (prefers-color-scheme: dark) {
-    // Dark mode theming.
-    --fill-0: var(--gray6);
-    --fill-1: var(--gray5);
-    --fill-2: var(--gray4);
-    --text-color: rgb(229, 229, 234); // Gray5 light.
-
-    // Apple HGI dark mode colors.
-    --gray1: rgb(142, 142, 147);
-    --gray2: rgb(99, 99, 102);
-    --gray3: rgb(72, 72, 74);
-    --gray4: rgb(58, 58, 60);
-    --gray5: rgb(44, 44, 46);
-    --gray6: rgb(28, 28, 30);
+    --border: 1px solid var(--gray5-dark);
     --default: black;
+    --fill-0: var(--gray6-dark);
+    --fill-1: var(--gray5-dark);
+    --fill-2: var(--gray4-dark);
+    --text-color: var(--gray5);
   }
 }
