--- a/src/js/components/settings/settings.scss
+++ b/src/js/components/settings/settings.scss
@@ -3,7 +3,7 @@
 
 $button-size: 2.75rem;
 $menu-padding: .75rem;
-$swatch-size: 2.75rem;
+$swatch-size: 2rem;
 $toggle-padding: .125rem;
 $toggle-size: 1.25rem;
 
@@ -16,7 +16,7 @@ $toggle-size: 1.25rem;
 // The dialog.
 // [1] Required by Safari for open/close transitions.
 dialog {
-  background-color: var(--fill-1);
+  background-color: var(--dialog-background);
   border: var(--border);
   border-radius: 1rem;
   display: block; // [1]
@@ -44,8 +44,8 @@ html:has(dialog[open]) {
 // All settings in a standard <form> element.
 form {
   display: grid;
-  gap: $menu-padding;
-  grid: '. . .' 'swatches swatches swatches' / 1fr 1fr 1fr;
+  gap: $menu-padding 0;
+  grid: auto auto / 1fr 1fr;
   padding-block: $menu-padding;
 }
 
@@ -53,18 +53,13 @@ form {
 ul {
   display: flex;
   gap: .375rem;
-  grid-area: swatches;
+  grid-area: 2 / 1 / 2 / -1;
   list-style: none;
   margin: 0;
   overflow: auto hidden;
   padding-inline: $menu-padding;
   scrollbar-width: none;
   transition: opacity var(--transition);
-
-  &[aria-disabled] {
-    opacity: .25;
-    pointer-events: none;
-  }
 
   &::-webkit-scrollbar {
     display: none;
@@ -80,12 +75,11 @@ input {
   padding: 0;
 }
 
-// [1] Default border color should match background color of the dialog since
-// the border also acts as a focus indicator since an outline in Safari doesn't
+// [1] Border also acts as a focus indicator since an outline in Safari doesn't
 // inherit the border-radius of the active element.
 [type='radio'] {
   block-size: $swatch-size;
-  border: 3px solid var(--fill-1); // [1]
+  border: 3px solid var(--swatch-border-color); // [1]
   border-radius: math.div($swatch-size, 2);
   display: grid;
   grid: 'content';
@@ -118,18 +112,19 @@ input {
     grid-area: content;
   }
 
+  // Filled circle.
   &::before {
     background-color: var(--theme);
   }
 
   // Checkmark overlaid on selected swatch.
   &:checked::after {
-    block-size: .75rem;
-    border-block-end: 3px solid var(--on-theme);
-    border-inline-start: 3px solid var(--on-theme);
-    inline-size: 1.25rem;
+    block-size: 11px;
+    border-block-end: 3px solid var(--checked-color);
+    border-inline-start: 3px solid var(--checked-color);
+    inline-size: 17px;
     place-self: center;
-    transform: rotate(-45deg) translate3d(.125rem, -.125rem, 0);
+    transform: rotate(-45deg) translate3d(1px, -1px, 0);
   }
 }
 
@@ -139,9 +134,9 @@ label {
   color: var(--text-color);
   cursor: pointer;
   display: grid;
-  gap: 0 1rem;
+  gap: 0 .5rem;
   grid: 'text toggle' / 1fr auto;
-  padding-inline: 1rem .75rem;
+  padding-inline: .75rem;
 }
 
 label > span {
@@ -173,8 +168,9 @@ input[type='checkbox'] {
     grid-area: content;
   }
 
+  // Filled capsule.
   &::before {
-    background-color: var(--fill-2);
+    background-color: var(--toggle-background);
     transition: background-color var(--transition);
   }
 
@@ -182,6 +178,7 @@ input[type='checkbox'] {
     background-color: var(--green);
   }
 
+  // Sliding switch.
   &::after {
     align-self: center;
     background-color: white;
@@ -201,27 +198,42 @@ input[type='checkbox'] {
 
 // Theming for radio button swatches.
 [value] {
-  --on-theme: var(--gray6-dark);
+  --checked-color: var(--gray6-dark);
 }
 
 [value='default'] {
-  --theme: var(--gray6);
+  --swatch-border-color: var(--gray6);
+  --theme: var(--default);
 }
 
+[value='none'] {
+  --swatch-border-color: var(--gray6);
+  --theme: var(--body-background);
+}
+
+// Light theme color vars.
 @each $theme in themes.$themes {
   [value='#{$theme}'] {
+    --swatch-border-color: var(--#{$theme});
     --theme: var(--#{$theme});
   }
 }
 
 @media (prefers-color-scheme: dark) {
   [value='default'] {
-    --on-theme: var(--gray6);
-    --theme: var(--default);
+    --checked-color: var(--gray6);
+    --swatch-border-color: var(--gray6-dark);
   }
 
+  [value='none'] {
+    --checked-color: var(--gray6);
+    --swatch-border-color: var(--gray6-dark);
+  }
+
+  // Dark theme color vars.
   @each $theme in themes.$themes {
     [value='#{$theme}'] {
+      --swatch-border-color: var(--#{$theme}-dark-contrast);
       --theme: var(--#{$theme}-dark-contrast);
     }
   }
