--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -15,7 +15,7 @@ html {
 }
 
 body {
-  background-color: var(--fill-0);
+  background-color: var(--body-background);
   block-size: 100dvh;
   color: var(--text-color);
   display: grid;
