flattens, reorganizes, renames project folders (no-op)

--- a/src/js/shadow-styles/app.scss
+++ b/src/js/shadow-styles/app.scss
@@ -1,4 +1,4 @@
-@use '../../../styles/themes' as themes;
+@use '../../styles/themes' as themes;
 
 // Hands colors don't change between light and dark mode, but second hands
 // color does change when there is no theme applied.
