--- a/src/js/shadow-styles/settings.scss
+++ b/src/js/shadow-styles/settings.scss
@@ -1,5 +1,5 @@
 @use 'sass:math';
-@use '../../../styles/themes' as themes;
+@use '../../styles/themes' as themes;
 
 $button-size: 2.75rem;
 $menu-padding: .75rem;
